Closed Bug 52287 Opened 25 years ago Closed 25 years ago

Installer stops after downloading XPInstall engine

Categories

(SeaMonkey :: Installer, defect, P1)

x86
Linux
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: agracebush, Assigned: samir_bugzilla)

References

Details

(Whiteboard: [nsbeta3+])

Steps to reproduce: 1. Use mozilla (or Netscape 6) Installer for build 2000091208 2. Choose any installation setup type Actual results: Progress window shows downloading (1/x) at x/xx sec and hangs Expected results: to continue download of components etc.
Keywords: nsbeta3, regression
changing QA contact/severity
Severity: normal → critical
QA Contact: gemal → gbush
*** Bug 52284 has been marked as a duplicate of this bug. ***
Shouldn't this be a dogfood bug?
Keywords: dogfood
not a dogfood bug in my opinion. the easy workaround is to use the tar.gz builds.
this is a smoketest failure but not a blocker. Blocker (which holds the tree closed) is reserved for tests which fail and in failing block us from testing other major areas of functionality.
Investigating.
Status: NEW → ASSIGNED
Priority: P3 → P1
Target Milestone: --- → M18
Severity: critical → blocker
Connection reuse problems. Fix in hand awaiting review.
Keywords: regression
This is a dogfood for Grace as she cannot proceed for testing Linux installer options, etc.
This is nsbeta3+ for the Commercial tree.
Whiteboard: [nsbeta3+]
Tested a debug version of the installer with my fix against today's optimized .xpi bits successfully. Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
verified on commercial build 2000-09-13-06-M18
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.