Make linux installer ftp download correctly by flushing the control connection after file transfer has completed. [nsbeta3+ b=52287; r=ssu]

Also, make the folder selection dialog cancel button *actually* destroy the
dialog when clicked. [r=ssu]